Bug 394825, Crash [@ nsGenericHTMLElement::SetElementFocus], r+sr+a=jst