content/events/src/nsEventStateManager.cpp
@@ -5155,7 +5155,7 @@ nsEventStateManager::MoveCaretToFocus()
       nsCOMPtr<nsIDOMDocumentRange> rangeDoc(do_QueryInterface(mDocument));
 
       if (rangeDoc) {
-        nsISelection* domSelection = shell->FrameSelection()->
+        nsCOMPtr<nsISelection> domSelection = shell->FrameSelection()->
           GetSelection(nsISelectionController::SELECTION_NORMAL);
         if (domSelection) {
           nsCOMPtr<nsIDOMNode> currentFocusNode(do_QueryInterface(mCurrentFocus));
